--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,7 +6,7 @@
 
 header {
     display: block;
-    position: fixed;
+    position: static;
     z-index: 1;
     margin-top: 0;
     background-color: black;
@@ -38,7 +38,7 @@ header {
 }
 
 .carousel-item {
-    margin-top: 220px;
+    margin-top: 20px;
 }
 
 .carousel-item > img {
