adição de produtos e mudança na paleta de cores

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -11,4 +11,13 @@
         width: 98%;
         height: 100%;
     }
+
+    .card {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 1rem;
+    }
+
+    .rodape > h3 {
+        font-size: 1rem;
+    }
 }
