--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,7 +9,7 @@ header {
     position: static;
     z-index: 1;
     margin-top: 0;
-    background-color: black;
+    background-color: #FF0099;
     width: 100%;
     overflow: hidden;
 }
@@ -25,8 +25,8 @@ header {
 }
 
 .header-logo > a > img{
-    width: 200px;
-    height: 200px;
+    width: auto;
+    height: 240px;
     margin: 0 auto;
 }
 
@@ -56,6 +56,8 @@ header {
     flex-direction: row;
     justify-content: center;
     margin: 20px 0 20px 0;
+    color: #5E17EB;
+    background-color: #FF0099;
 }
 
 .produtos-titulo > h1 {
@@ -69,13 +71,28 @@ header {
     justify-content: space-evenly;
 }
 
+.card {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: .4rem;
+}
+
+.rodape {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: #FF0099;
+}
+
+.rodape > h3 {
+    color: #5E17EB;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: .5rem;
+    padding: 10px;
+}
+
 @media screen and (max-width:768px) {
     body {
         width: 100%;
         height: 100%;
-    }
-
-    .projetos {
-        grid-template-columns: repeat(auto-fit, minmax)(47%, max)
     }
 }
